prometheus/prom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: devops-tools
  labels:
    app: prometheus
spec:
  selector:
    matchLabels:
      name: prometheus
  template:
    metadata:
      labels:
        name: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      - name: 'prometheus'
        image: 'prom/prometheus:v2.26.0'
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus/
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-configmap
