prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app: prometheus
spec:
  selector: 
    name: prometheus
  ports:
  - port: 9090
    targetPort: 9090
